# kaax-client

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Makefile  README.md  client.py  config.yaml  main.py  pyproject.toml
.do/: app.yaml
infra/cdk/: cdk.context.json  cdk.json
infra/cdk/config/: environments.example.json  environments.json
ops/: DEPLOY_DO.md  _cdk_env.sh  bootstrap.sh  deploy-do.sh  deploy.sh  destroy.sh  diff.sh  secrets-sync.sh  session-clear-all.sh  session-clear.sh
prompts/: agent.yaml  capture.yaml  capture_agent.yaml  discovery_agent.yaml  knowledge.yaml  qualification_agent.yaml  shared_base.yaml  voice_agent.yaml
states/: kaax_conversation_state.py
tools/: capture_lead_if_ready_tool.py  memory_intent_router_tool.py
